--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,11 @@
 .header {
     grid-area: header;
-    background-color: red;
-  }
-  
-  .header img {
+    background-color: #008bf5;
+    border-radius: 5px;
+}
+
+.header div {
     width: 149px;
-  }
+    height: 50px;
+    text-align: center;
+}
